--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,12 @@
     "module": "es2020",
     "lib": [
       "es2018",
-      "dom"
-    ]
+      "es5",
+      "es6",
+      "dom",
+      "dom.iterable"
+    ],
+    "strictPropertyInitialization": false
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
